public/css/status.css
section.status-dashboard {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: column;
  margin: 1rem 0.75rem;
  height: calc(100% - 4.5rem);
}

div.status-settings {
  height: 2.5rem;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: black;
}

select.component-component {
  width: 10rem;
  height: 2rem;
  font-size: 1rem;
  color: black;
  background-color: white;
  border-radius: 5px;
  border: 1px solid black;
  box-shadow: 2px 2px 5px black;
}

div#table-container {
  width: 100%;
  height: 100%;
}

